freeradius (0.9.2-0~pre0) unstable; urgency=low

  * Unreleased 0.9.2 update to 0.9.1

 -- Paul Hampson <Paul.Hampson@anu.edu.au>  Sat,  6 Sep 2003 04:53:17 +1000

freeradius (0.9.1-0) unstable; urgency=low

  * New upstream release.
  * Renamed radiusd(8) to freeradius(8) to match binary
  * Build-Depend on libtool1.4 | libtool (< 1.5) due to
    new libtool 1.5 package.
  * Merged multiple sed calls into a single sed call in debian/rules
  * Installed SQL database examples into /usr/share/doc/freeradius/examples
  * Modify initscript to only -HUP the parent process

 -- Paul Hampson <Paul.Hampson@anu.edu.au>  Fri,  5 Sep 2003 00:54:41 +1000

freeradius (0.9.0-1) unstable; urgency=low

  * New Upstream release.
   - Upstream dictionary files are in /usr/share/freeradius.
   - Modified to 'configure{,.in}' to work with openssl 0.9.7 and 0.9.6
  * Renamed pacakges to 'freeradius*' from 'radiusd-freeradius*'.
  * Moved file hierarchy around to be neater:
   - /etc/raddb -> /etc/freeradius
   - /usr/share/doc/radiusd-freeradius -> /usr/share/doc/freeradius
   - /var/log/radiusd-freeradius -> /var/log/freeradius
   - /var/run/radiusd/radiusd.pid -> /var/run/freeradius/freeradius.pid
  * Included RFCs in documentation.
  * Enabled the daemon to run under user 'freerad:freerad' by default.
  * Added support for DEB_BUILD_OPTIONS for policy 3.5.9 compliance.
  * Installed SNMP mibs for Radius

 -- Paul Hampson <Paul.Hampson@anu.edu.au>  Sun, 20 Jul 2003 06:56:28 +1000

radiusd-freeradius (0.7+cvs20021113-1) unstable; urgency=low
 
  * Explicitly excluding modules not in the "stable" list.
  * Updated policy version number.
  * Moved from non-US/main to main.
  * Put pidfile in package's own directory.
  * Package not as buggy and unstable modules are easily identifiable. 
    (closes: Bug#142217)
  * Init script handles failure better. (closes: Bug#151264)
  * New upstream release.  (closes: Bug#140536)
  * Uses available version of postgresql.  (closes: Bug#139290)