@@ -1,8 +1,11 @@
 freeradius (0.9.2-0~pre0) unstable; urgency=low
 
   * Unreleased 0.9.2 update to 0.9.1
+  * Added logrotate script for /var/log/freeradius/radius.log
+  * Don't leave symlinks to config.{guess,sub} lying around to
+    confuse dpkg-source.
 
- -- Paul Hampson <Paul.Hampson@anu.edu.au>  Sat,  6 Sep 2003 04:53:17 +1000
+ -- Paul Hampson <Paul.Hampson@anu.edu.au>  Mon, 13 Oct 2003 22:31:42 +1000
 
 freeradius (0.9.1-0) unstable; urgency=low
 
